"""
Timeline Lattice gRPC service server implementation.

This module would implement the gRPC server for the Timeline Lattice service.
Currently serves as a placeholder for future implementation.
"""

from grpc import aio
from structlog import get_logger

logger = get_logger(__name__)


class TimelineServiceStub:
    """
    Placeholder Timeline Lattice gRPC service implementation.

    This is a stub implementation that provides the basic structure
    for the Timeline Lattice gRPC service. When the protobuf files
    are properly generated, this can be replaced with the actual
    service implementation.
    """

    def __init__(self):
        """Initialize the Timeline service stub."""
        self.active_timelines = {}
        logger.info("Timeline service stub initialized")

    async def append_event(self, request, context):
        """Stub method for appending events to timeline."""
        logger.debug("Append event request received (stub)")
        # Return empty response for now
        return None

    async def create_timeline(self, request, context):
        """Stub method for creating new timeline."""
        logger.debug("Create timeline request received (stub)")
        return None

    async def get_timeline_info(self, request, context):
        """Stub method for getting timeline information."""
        logger.debug("Get timeline info request received (stub)")
        return None


def create_server() -> aio.Server:
    """
    Create and configure the gRPC server.

    Returns:
        aio.Server: Configured gRPC server instance
    """
    server = aio.server()

    # When protobuf files are available, add the actual servicer:
    # timeline_pb2_grpc.add_TimelineServiceServicer_to_server(
    #     TimelineServiceStub(), server
    # )

    # For now, just return the basic server
    logger.info("Timeline gRPC server created (stub mode)")
    return server


async def serve(host: str = "localhost", port: int = 50051):
    """
    Start the Timeline Lattice gRPC server.

    Args:
        host: Host to bind the server to
        port: Port to bind the server to
    """
    server = create_server()
    listen_addr = f"{host}:{port}"
    server.add_insecure_port(listen_addr)

    logger.info(f"Starting Timeline Lattice server on {listen_addr}")
    await server.start()

    try:
        await server.wait_for_termination()
    except KeyboardInterrupt:
        logger.info("Shutting down Timeline Lattice server")
        await server.stop(grace=5)


if __name__ == "__main__":
    import asyncio

    asyncio.run(serve())
